# NexusMusic_rs

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yaml
graphics_n/: Cargo.toml
graphics_n/src/: lib.rs
graphics_n/ui/: main.slint
next_audio/: Cargo.toml
next_audio/src/: lib.rs
next_graphics/: Cargo.toml  build.rs
next_graphics/src/: lib.rs
next_graphics/ui/: main.slint  mainPixel.slint  topBar.slint  topBarPixel.slint
next_graphics/ui/components/: controlBarPixel.slint  topBarPixel.slint
next_graphics/ui/fonts/: ark-pixel-10px-proportional.ttc
next_graphics/ui/pixel_windows/: mainPixel.slint
next_graphics/ui/pixel_windows/components/: controlBarPixel.slint  mainContent.slint  pixelWidgets.slint  sideListPixel.slint  topBarPixel.slint
noa/: Cargo.toml
noa/src/: lib.rs
noa/src/event/: event.rs  event_handler.rs  event_pool.rs  new_event.rs  thread_event.rs  utils.rs
noa/src/log/: log.rs  noa_macros.rs  ui_log_macros.rs
sound_n/: Cargo.toml
sound_n/src/: lib.rs
src/: lib.rs  main.rs
src/logs/: log.rs
