[package]
name = "graphics_n"
version = "0.1.0"
build = "build.rs"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "graphics_nexus"
path = "src/lib.rs"

[dependencies]
slint = "1.3.2"

[build-dependencies]
slint-build = "1.3.2"