[package]
name = "next_graphics"
version = "0.1.0"
build = "build.rs"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "next_graphics"
path = "src/lib.rs"

[dependencies.noa]
path = "../noa"

[dependencies]
slint = "1.5.1"

[build-dependencies]
slint-build = "1.5.1"